updated sequenced individuals notebook with Hong Kong and Davis data

--- a/notebook/2018-09-12-sequenced-individuals/2018-09-12-sequenced-individuals.Rmd
+++ b/notebook/2018-09-12-sequenced-individuals/2018-09-12-sequenced-individuals.Rmd
@@ -113,7 +113,7 @@ summ <- c(lapply(Dx, function(d) summ$cmc[ names(summ$cmc) %in% rownames(clinica
 
 The same information graphically
 
-```{r summary}
+```{r summary, fig.asp=1.5}
 summ.l <- my.levelplot(summ)
 ```
 
