refining psychiatric disorder data from GWAS catalog

--- a/notebook/2021-03-09-gwas-genes/2021-03-09-gwas-genes.ipynb
+++ b/notebook/2021-03-09-gwas-genes/2021-03-09-gwas-genes.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -33,6 +24,7 @@
     "from bsmcalls import operations\n",
     "from bsmcalls import resources\n",
     "from matplotlib import pyplot as plt\n",
+    "import re\n",
     "import attila_utils\n",
     "%matplotlib inline"
    ]
@@ -259,7 +251,7 @@
      "output_type": "stream",
      "text": [
       "79 genes\n",
-      "{'LINC01776', 'EEF1A1P11', 'AL589740.1', 'PAUPAR', 'MAPT', 'ESRRB', 'AC021192.2', 'LINC02790', 'AL117332.1', 'SERPINA2', 'PTBP2', 'XRN2', 'EGR2', 'RNU1-130P', 'BEND4', 'AL139300.2', 'AC095031.1', 'AC120036.1', 'RSU1', 'CADPS', 'GALNT10', 'C8orf74', 'GALNT1', 'AC013287.1', 'NRGN', 'U95743.1', 'OLFM4', 'AC090987.1', 'RN7SL831P', 'NEGR1', 'MROH5', 'AL133270.1', 'KCNN2', 'NKX2-4', 'AL391117.1', 'AC092506.1', 'RSRC1', 'RNU7-160P', 'SRPK2', 'AL591888.1', 'AC099520.1', 'ITIH4', 'ZNF568', 'AL022724.3', 'AC026320.3', 'AC005070.3', 'NKX2-2', 'ZNF877P', 'LINC02058', 'AL032822.1', 'ASAP1', 'PINX1', 'AL136456.1', 'GUCY1A2', 'AC025839.1', 'PCDH9', 'LINC00461', 'KMT2E', 'SGO1-AS1', 'KANSL1', 'ADTRP', 'AL035078.4', 'RBFOX1', 'SOX7', 'MACROD2', 'AC022387.1', 'FGF12', 'SERPINA1', 'KIZ', 'GABBR1', 'ITIH3', 'LOC102723661', 'LINC02210-CRHR1', 'AL139093.1', 'RP1L1', 'PKP4', 'U91319.1', 'NEDD4L', 'SORCS3'}\n"
+      "{'RSRC1', 'RSU1', 'LINC02790', 'U91319.1', 'MAPT', 'ASAP1', 'NEDD4L', 'AC025839.1', 'AC092506.1', 'AL032822.1', 'NKX2-4', 'AL136456.1', 'AL589740.1', 'PCDH9', 'SERPINA2', 'ADTRP', 'OLFM4', 'NEGR1', 'GABBR1', 'GALNT10', 'SGO1-AS1', 'LINC02210-CRHR1', 'SORCS3', 'SERPINA1', 'EEF1A1P11', 'ZNF877P', 'BEND4', 'CADPS', 'C8orf74', 'FGF12', 'LINC02058', 'MACROD2', 'NKX2-2', 'LINC00461', 'ZNF568', 'AC099520.1', 'RNU7-160P', 'AL391117.1', 'U95743.1', 'RP1L1', 'AC013287.1', 'PKP4', 'AC026320.3', 'AC120036.1', 'KANSL1', 'GALNT1', 'MROH5', 'AL139300.2', 'RNU1-130P', 'ITIH4', 'RBFOX1', 'PAUPAR', 'AC021192.2', 'SRPK2', 'PTBP2', 'AL035078.4', 'NRGN', 'SOX7', 'AC095031.1', 'AC005070.3', 'GUCY1A2', 'EGR2', 'PINX1', 'AL591888.1', 'XRN2', 'LINC01776', 'ESRRB', 'AC090987.1', 'AL139093.1', 'AL133270.1', 'LOC102723661', 'KCNN2', 'KMT2E', 'ITIH3', 'RN7SL831P', 'AC022387.1', 'AL022724.3', 'AL117332.1', 'KIZ'}\n"
      ]
     }
    ],
@@ -568,7 +560,7 @@
    "source": [
     "## Psychiatric disorders\n",
     "\n",
-    "The [Analysis of shared heritability in common disorders of the brain](https://pubmed.ncbi.nlm.nih.gov/29930110/) showed the following psychiatric disorders to correlate significantly with schizophrenia:\n",
+    "The [Analysis of shared heritability in common disorders of the brain](https://pubmed.ncbi.nlm.nih.gov/29930110/) showed the following psychiatric disorders to correlate significantly with schizophrenia or ASD:\n",
     "* ADHD; PMID: [30478444](https://pubmed.ncbi.nlm.nih.gov/30478444/); Demontis et al 2019 Nat Genet\n",
     "* Anorexia nervosa; PMID: [31308545](https://pubmed.ncbi.nlm.nih.gov/31308545/); Watson et al 2019 Nat Genet\n",
     "* ASD; PMID: [30804558](https://pubmed.ncbi.nlm.nih.gov/30804558/); Grove et al 2019 Nat Genet\n",
@@ -576,12 +568,14 @@
     "* MDD; PMID: [30718901](https://pubmed.ncbi.nlm.nih.gov/30718901/); Howard et al 2019 Nat Neurosci\n",
     "* OCD;  PMID: [31891238](https://pubmed.ncbi.nlm.nih.gov/31891238/); Smit et al 2020 Am J Med Genet B Neuropsychiatr Genet\n",
     "* Schizophrenia; PMID: [29483656](https://pubmed.ncbi.nlm.nih.gov/29483656/); Pardiñas et al 2018 Nat Genet\n",
+    "\n",
+    "The following psychiatric disorders do not correlate with schizophrenia nor ASD:\n",
     "* Tourette syndrome; PMID: [30818990](https://pubmed.ncbi.nlm.nih.gov/30818990/); Yu et al 2019 Am J Psychiatry"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -630,10 +624,16 @@
        "      <td>Watson et al 2019 Nat Genet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>Anxiety disorders</th>\n",
+       "      <td>psychiatric uncorr</td>\n",
+       "      <td>31116379</td>\n",
+       "      <td>Meier et al 2019 JAMA Psychiatry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>ASD</th>\n",
        "      <td>psychiatric</td>\n",
        "      <td>30804558</td>\n",
-       "      <td>Grove et al 2019 Nat Genet</td>\n",
+       "      <td>Meier et al 2019 JAMA Psychiatry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Bipolar disorder</th>\n",
@@ -648,6 +648,18 @@
        "      <td>Howard et al 2019 Nat Neurosci</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>OCD</th>\n",
+       "      <td>psychiatric uncorr</td>\n",
+       "      <td>30456828</td>\n",
+       "      <td>Khramtsova et al 2018 Am J Med Genet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PTSD</th>\n",
+       "      <td>psychiatric uncorr</td>\n",
+       "      <td>31594949</td>\n",
+       "      <td>Nievergelt et al 2019 Nat Commun</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Shizophrenia</th>\n",
        "      <td>psychiatric</td>\n",
        "      <td>29483656</td>\n",
@@ -655,7 +667,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Tourette syndrome</th>\n",
-       "      <td>psychiatric</td>\n",
+       "      <td>psychiatric uncorr</td>\n",
        "      <td>30818990</td>\n",
        "      <td>Yu et al 2019 Am J Psychiatry</td>\n",
        "    </tr>\n",
@@ -664,18 +676,34 @@
        "</div>"
       ],
       "text/plain": [
-       "                    Trait type      PMID                        Citation\n",
-       "Trait                                                                   \n",
-       "ADHD               psychiatric  30478444   Demontis et al 2019 Nat Genet\n",
-       "Anorexia nervosa   psychiatric  31308545     Watson et al 2019 Nat Genet\n",
-       "ASD                psychiatric  30804558      Grove et al 2019 Nat Genet\n",
-       "Bipolar disorder   psychiatric  31043756      Stahl et al 2019 Nat Genet\n",
-       "MDD                psychiatric  30718901  Howard et al 2019 Nat Neurosci\n",
-       "Shizophrenia       psychiatric  29483656   Pardiñas et al 2018 Nat Genet\n",
-       "Tourette syndrome  psychiatric  30818990   Yu et al 2019 Am J Psychiatry"
+       "                           Trait type      PMID  \\\n",
+       "Trait                                             \n",
+       "ADHD                      psychiatric  30478444   \n",
+       "Anorexia nervosa          psychiatric  31308545   \n",
+       "Anxiety disorders  psychiatric uncorr  31116379   \n",
+       "ASD                       psychiatric  30804558   \n",
+       "Bipolar disorder          psychiatric  31043756   \n",
+       "MDD                       psychiatric  30718901   \n",
+       "OCD                psychiatric uncorr  30456828   \n",
+       "PTSD               psychiatric uncorr  31594949   \n",
+       "Shizophrenia              psychiatric  29483656   \n",
+       "Tourette syndrome  psychiatric uncorr  30818990   \n",
+       "\n",
+       "                                               Citation  \n",
+       "Trait                                                    \n",
+       "ADHD                      Demontis et al 2019 Nat Genet  \n",
+       "Anorexia nervosa            Watson et al 2019 Nat Genet  \n",
+       "Anxiety disorders      Meier et al 2019 JAMA Psychiatry  \n",
+       "ASD                    Meier et al 2019 JAMA Psychiatry  \n",
+       "Bipolar disorder             Stahl et al 2019 Nat Genet  \n",
+       "MDD                      Howard et al 2019 Nat Neurosci  \n",
+       "OCD                Khramtsova et al 2018 Am J Med Genet  \n",
+       "PTSD                   Nievergelt et al 2019 Nat Commun  \n",
+       "Shizophrenia              Pardiñas et al 2018 Nat Genet  \n",
+       "Tourette syndrome         Yu et al 2019 Am J Psychiatry  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -708,16 +736,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of genes in associated to any psychiatric disorder:\n",
+      "894 reported\n",
+      "1270 reported or mapped\n"
+     ]
+    }
+   ],
    "source": [
-    "D = resources.gwascat_multi_genesets(gwas, selgwas)"
+    "psychiatric_genesets = resources.gwascat_multi_genesets(gwas, selgwas.loc[selgwas['Trait type'] == 'psychiatric'])\n",
+    "\n",
+    "psychiatric_reported = set()\n",
+    "psychiatric = set()\n",
+    "for k in psychiatric_genesets.keys():\n",
+    "    gset = psychiatric_genesets[k]\n",
+    "    if re.match('.*reported$', k):\n",
+    "        psychiatric_reported.update(gset)\n",
+    "    else:\n",
+    "        psychiatric.update(gset)\n",
+    "\n",
+    "print('Number of genes in associated to any psychiatric disorder:')\n",
+    "print(len(psychiatric_reported), 'reported')\n",
+    "print(len(psychiatric), 'reported or mapped')\n",
+    "\n",
+    "psychiatric_genesets.update({'Psychiatric reported': psychiatric_reported, 'Psychiatric': psychiatric})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -987,20 +1040,20 @@
        "      <td>0.012369</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Tourette syndrome reported</th>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.461751</td>\n",
-       "      <td>0.793838</td>\n",
+       "      <th>Psychiatric reported</th>\n",
+       "      <td>34</td>\n",
+       "      <td>97</td>\n",
+       "      <td>58</td>\n",
+       "      <td>13.412099</td>\n",
+       "      <td>0.001223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Tourette syndrome</th>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.461751</td>\n",
-       "      <td>0.793838</td>\n",
+       "      <th>Psychiatric</th>\n",
+       "      <td>49</td>\n",
+       "      <td>127</td>\n",
+       "      <td>80</td>\n",
+       "      <td>13.492958</td>\n",
+       "      <td>0.001175</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1035,8 +1088,8 @@
        "                           MDD                                13   27   22   \n",
        "                           Shizophrenia reported              11   43   33   \n",
        "                           Shizophrenia                       11   43   36   \n",
-       "                           Tourette syndrome reported          9   10   10   \n",
-       "                           Tourette syndrome                   9   10   10   \n",
+       "                           Psychiatric reported               34   97   58   \n",
+       "                           Psychiatric                        49  127   80   \n",
        "\n",
        "                                                         chisq stat   chisq p  \n",
        "Feature                    Query                                               \n",
@@ -1066,11 +1119,11 @@
        "                           MDD                             0.918933  0.631621  \n",
        "                           Shizophrenia reported           8.500248  0.014262  \n",
        "                           Shizophrenia                    8.785091  0.012369  \n",
-       "                           Tourette syndrome reported      0.461751  0.793838  \n",
-       "                           Tourette syndrome               0.461751  0.793838  "
+       "                           Psychiatric reported           13.412099  0.001223  \n",
+       "                           Psychiatric                    13.492958  0.001175  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1137,7 @@
     "             'phast_Score': None,\n",
     "             'gerp_Element RS Score': None,\n",
     "             'cpg_CpG Island': None,\n",
-    "             'near_gens_Overlapped Gene': D,\n",
+    "             'near_gens_Overlapped Gene': psychiatric_genesets,\n",
     "            }\n",
     "results = operations.multiquery(querydict, data, do_sum=False, do_sort=False)\n",
     "summary = operations.summarize_query_results(results, data, chisq=True, margin=False)\n",
@@ -1093,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
